--- a/docs/学习内容/Python/推荐的包结构.md
+++ b/docs/学习内容/Python/推荐的包结构.md
@@ -1,15 +1,15 @@
 ```Python
 project/           ← 项目根目录（不参与 import）
 │
-├── package name/  ← Python 包（import 的根）   # 主包
+├── package name/  ← Python 包（import 的根）   # 主应用逻辑
 │   ├── __init__.py
 │   ├── config.py
-│   ├── utils/
+│   ├── utils/    # 通用工具函数
 │   │   ├── __init__.py
 │   │   ├── io.py
 │   │   └── logging.py
 │   │
-│   ├── core/
+│   ├── core/         # 核心业务逻辑（如 UI、控制流）
 │   │   ├── __init__.py
 │   │   ├── engine.py
 │   │   └── registry.py
@@ -19,16 +19,18 @@ project/           ← 项目根目录（不参与 import）
 │   │   ├── base.py
 │   │   └── linear.py
 │   │
-│   └── plugins/
-│       ├── __init__.py
-│       ├── loader.py
-│       └── example_plugin/
-│           ├── __init__.py
-│           └── plugin.py
-├── Docs/
+│   ├── plugins/
+│   │   ├── __init__.py
+│   │   ├── loader.py
+│   │   └── example_plugin/
+│   │       ├── __init__.py
+│   │       └── plugin.py
+│   └── tools/   # LangChain 工具定义
+├── docs/
+├── agents/      # Agent 构建逻辑
 ├── .venv/
 ├── .github/
-├── .vscode/
+├── .vscode/     # VS Code 配置（可选）
 ├── tests/
 ├── README.md
 ├── .gitignore
